load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "docopt",
    visibility = ["//visibility:public"],
    hdrs = [  
        "docopt.h",
        "docopt_value.h",
        "docopt_util.h",
    ],
    srcs = [
        "docopt.h",
        "docopt_private.h",
        "docopt.cpp",
    ],
)
