load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "docopt",
    visibility = ["//visibility:public"],
    hdrs = [  
        "docopt.h",
        "docopt_value.h",
        "docopt_util.h",
        "docopt_config.h",
    ],
    srcs = [
        "docopt_private.h",
        "docopt.cpp",
        "docopt_value.cpp",
    ],
)
